Use valueOf for number type instantiation
The constructors for Character, Integer, and Long are deprecated as of
Java 9, the static valueOf methods should be used instead.